--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.29.0",
+    "@editorjs/header": "^2.8.1",
+    "@editorjs/image": "^2.9.0",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
